--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,17 @@
 spring:
   profiles:
     active: test
-
+----
+spring:
+  profile: test
+  application:
+    name: trade-test          			
+server:
+  port: 8763
+----
+spring:
+  profile: prod
+  application:
+    name: trade-prod       			                      
+server:
+  port: 8773
